--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ input{
     background-color: rgba(0, 0, 0, 0.801);
     color: white;
     font-size: 50px;
+    text-align: right;
     
 }
 .calcu {
